# alpine-guide-ML

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.full-stack.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: README.md  main.py  models.py
backend/api/: __init__.py  chat_endpoint.py
backend/collectors/: opendata.py
backend/config/territories/: annecy.yaml  chambery.yaml  chamonix.yaml
backend/core/: cache_manager.py  intents_slots.yaml  orchestrator.py
backend/cron/: enrich_maps_links.py
backend/data/collectors/: __init__.py
backend/data/collectors_alpine/: datatourisme.py
backend/data/ingestion/: datatourisme_collector.py  openmeteo_collector.py
backend/data/processed/: .gitkeep  opportunities.csv  opportunities.json
backend/ml/models/: .gitkeep
backend/ml/models/quality_scorer/: feature_importance.csv  features.txt
backend/ml/training/: 02_feature_engineering.py  04_gap_detector.py
backend/models/: event.py  external_api.py  journey.py  partner.py  poi_models.py  tenant.py  user_planning.py
backend/scripts/: generate_embeddings.py  import_datatourisme.py
backend/scripts/old/: apply_migration.py  check_rls_policies.py
backend/services/: session_manager.py  supabase_service.py  tenant_service.py  weather_service.py
dashboard/: README.md  app.py
data/: __init__.py
data/collectors/: weather.py
data/collectors_alpine/: water_temperature.py
data/ingestion/: insee_melodi_collector.py  opendatasoft_collector.py
data/processed/: pois_enriched_eda.parquet
data/raw/: README.md
docs/: ARCHITECTURE.md  CODE_AUDIT_RECOMMENDATIONS.md  ML_PIPELINE.md
infrastructure/docker/: Dockerfile.api  Dockerfile.backend  Dockerfile.dashboard  install.sh
infrastructure/docker/deploy/: Dockerfile.web  docker-compose.yml  nginx.conf
infrastructure/monitoring/: prometheus.yml
ml/: __init__.py
ml/inference/: __init__.py  scorer.py
ml/models/quality_scorer/: metrics.json  scorer.pkl
ml/training/: 01_data_collection_eda.ipynb  03_train_quality_scorer.py  run_eda.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_poi_scorer.py
widget/: alpine-guide-widget.js  build.js  styles.css
widget/admin-simple/: demo.html  index.html
