[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tourismiq-platform"
version = "1.0.0"
description = "End-to-end ML/AI platform for tourism data quality and intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nicolas Angougeard", email = "contact@example.com"}
]
keywords = [
    "machine-learning",
    "tourism",
    "data-quality",
    "gradient-boosting",
    "feature-engineering",
    "api",
    "production-ml"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas==2.2.0",
    "scikit-learn==1.4.0",
    "lightgbm==4.3.0",
    "xgboost==2.0.3",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "redis==5.0.1",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.3",
    "black==24.1.0",
    "flake8==7.0.0",
    "mypy==1.8.0",
]
ml = [
    "optuna==3.5.0",
    "hdbscan==0.8.33",
    "umap-learn==0.5.5",
]
nlp = [
    "transformers==4.37.0",
    "sentence-transformers==2.3.1",
    "spacy==3.7.2",
    "faiss-cpu==1.7.4",
]
viz = [
    "streamlit==1.50.0",
    "plotly==6.3.1",
    "seaborn==0.13.1",
    "matplotlib==3.8.2",
]

[project.urls]
Homepage = "https://github.com/nicolasangougeard/tourismiq-platform"
Documentation = "https://github.com/nicolasangougeard/tourismiq-platform/tree/main/docs"
Repository = "https://github.com/nicolasangougeard/tourismiq-platform"
Issues = "https://github.com/nicolasangougeard/tourismiq-platform/issues"

[tool.setuptools]
packages = ["ml", "api", "data"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "lightgbm.*",
    "xgboost.*",
    "streamlit.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=ml --cov=api --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "api: API tests",
    "ml: Machine learning tests",
]

[tool.coverage.run]
source = ["ml", "api", "data"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]
